--- a/app/views/sendMessage.html
+++ b/app/views/sendMessage.html
@@ -20,7 +20,7 @@
                             <div class="form-group"><label class="col-sm-1 control-label">Title:</label>
                                 <div class="col-sm-10"><input type="text" class="form-control" value=""></div>
                             </div>
-                            <div class="form-group"><label class="col-sm-1 control-label">Subject:</label>
+                            <div class="form-group"><label class="col-sm-1 control-label">Message:</label>
                                 <div class="col-sm-10"><textarea class="form-control" rows="10" id="comment"></textarea></div>
                             </div>
                         </form>
@@ -52,9 +52,8 @@
 <script src="../js/inspinia.js"></script>
 <script src="../js/plugins/pace/pace.min.js"></script>
 
-<!-- iCheck -->
-<script src="../js/plugins/iCheck/icheck.min.js"></script>
 <script src="../js/sendMessage.js"></script>
+<script src="../js/getUrlParam.js"></script>
 </body>
 
 </html>
