--- a/app/views/sendMessage.html
+++ b/app/views/sendMessage.html
@@ -27,7 +27,7 @@
                     </div>
 
                     <div class="mail-body text-right tooltip-demo">
-                        <a id="sendMessageButton" class="btn btn-sm btn-primary" data-toggle="tooltip" data-placement="top" title="Send"><i class="fa fa-reply"></i> Send</a>
+                        <a id="sendMessageButton" onclick="send()" class="btn btn-sm btn-primary" data-toggle="tooltip" data-placement="top" title="Send"><i class="fa fa-reply"></i> Send</a>
                         <a  class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="top" title="Discard email"><i class="fa fa-times"></i> Discard</a>
                     </div>
 
